tests/bad-ctor-02/out.txt
error: pattern does not have a constructor type: int -> d
  ┌─ err.sml:5:5
  │
5 │   | B => 2
  │     ^

typechecking failed
